# cardano-base-rust

./: .gitignore  ACTION_PLAN.md  AUDIT_COMPARISON.md  AUDIT_COMPLETION.md  AUDIT_FINAL_REPORT.md  AUDIT_FIXES_APPLIED.md  AUDIT_QUICK_REF.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  CARGO_FIX_SUMMARY.md  CBOR_COMPATIBILITY_REPORT.md  CHANGELOG.md  COMPATIBILITY_MATRIX.md  CONTRIBUTING.md  CROSS_CHAIN_FEATURES.md  CROSS_CHAIN_IMPLEMENTATION_COMPLETE.md  CROSS_CODE_VERIFICATION_COMPLETE.md  Cargo.toml  DEPENDENCY_AUDIT.md  ECDSA_SECP256K1_TEST_HARNESS_COMPLETE.md  FINAL_GAP_VERIFICATION.md  FINAL_PUSH_INSTRUCTIONS.md  FINAL_SUMMARY.md  GAP_ANALYSIS_SUMMARY.md  HASH_FIX_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  ISSUES_FIXED_SUMMARY.md  KES_VERIFICATION_CHECKLIST.md  KES_VERIFICATION_COMPLETE.md  MARKDOWN_LINT_FIXES.md  MIGRATION_SERDE_CBOR_TO_CIBORIUM.md  MISSING_FEATURES.md  NOTICE  OPEN_SOURCE_PREPARATION_COMPLETE.md  PHASE10_COMPLETE.md  PHASE_04_COMPLETION_REPORT.md  PHASE_04_DSIGN_QUICK_SUMMARY.md  PHASE_05_AUDIT.md  PRE_COMMIT_CHECKLIST.md  PROJECT_INDEX.md  (+32 more)
.devcontainer/: devcontainer.json
.github/: CODE_REVIEW_VRF_PARITY.md  GITHUB_ISSUES_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  RELEASE_v0.2.0_PREPARATION.md  sync-wiki.yml
base-deriving-via/: CHANGELOG.md  Cargo.toml  README.md
base-deriving-via/src/: generic.rs  instantiated_at.rs  lib.rs  macros.rs  semigroup.rs
base-deriving-via/tests/: instantiated_at.rs  semigroup.rs
cardano-base/: CHANGELOG.md  Cargo.toml  README.md
cardano-base/src/: lib.rs
cardano-binary/: CHANGELOG.md  Cargo.toml  HASKELL_MAPPING.md  README.md
cardano-binary/benches/: cbor_bench.rs
cardano-binary/src/: deserialize.rs  error.rs  lib.rs  serialize.rs
cardano-binary/tests/: cbor_compatibility.rs  golden_tests.rs  haskell_cross_validation.rs  proptest_roundtrip.rs
cardano-crypto-class/: CHANGELOG.md  CROSS_COMPAT_PHASE2_COMPLETE.md  Cargo.toml  PHASE3_HASKELL_INTEGRATION_GUIDE.md  PHASE3_INFRASTRUCTURE_COMPLETE.md  README.md  SESSION3_SUMMARY.md  SESSION4_SUMMARY.md  SUM_KES_BLOCKER_RESOLVED.md  build.rs  generate_haskell_reference.sh
cardano-crypto-class/benches/: hash_bench.rs  kes_bench.rs
cardano-crypto-class/src/: direct_serialise.rs  ffi.rs  hash.rs  lib.rs  mlocked_bytes.rs  mlocked_metrics.rs  mlocked_seed.rs  packed_bytes.rs  pinned_sized_bytes.rs  seed.rs  util.rs
cardano-crypto-class/src/dsign/: ecdsa_secp256k1.rs  ed25519.rs  ed25519_mlocked.rs  mod.rs  schnorr_secp256k1.rs
cardano-crypto-class/src/kes/: compact_single.rs  compact_sum.rs  hash.rs  metrics.rs  mod.rs  single.rs  sum.rs  verify_hash.rs
cardano-crypto-class/src/vrf/: mock.rs  mod.rs  never.rs  praos.rs  praos_batch.rs  simple.rs
cardano-crypto-class/test_vectors/: vrf_ver03_generated_1  vrf_ver03_generated_2  vrf_ver03_generated_3  vrf_ver03_generated_4  vrf_ver03_standard_10  vrf_ver03_standard_11  vrf_ver03_standard_12  vrf_ver13_generated_1  vrf_ver13_generated_2  vrf_ver13_generated_3  vrf_ver13_generated_4  vrf_ver13_standard_10  vrf_ver13_standard_11  vrf_ver13_standard_12
cardano-crypto-class/tests/: cbor_serialization.rs  compact_sum_kes_vectors.rs  cross_algorithm_verification.rs  cross_compat.rs  direct_serialise_impls.rs  dsign_ecdsa_secp256k1_vectors.rs  dsign_ed25519_vectors.rs  dsign_schnorr_secp256k1_vectors.rs  hash_vectors.rs  hash_verification_key.rs  kes_boundary.rs  kes_compact_single_vectors.rs  kes_cross_family.rs  kes_direct_serialise.rs  kes_exports.rs  kes_forward_security.rs  kes_gen_key_from_seed.rs  kes_haskell_parity.rs  kes_integration.rs  kes_single_vectors.rs  kes_size_regression.rs  kes_sum_vectors.rs  sum_kes_structure.rs  sum_kes_unblocked.rs  vrf_praos_vectors.rs
cardano-crypto-class/tests/test_vectors/: README.md  compact_single_kes_vectors.json  ed25519_vectors.json  mock_vrf_vectors.json  praos_vrf_vectors.json  simple_vrf_vectors.json  single_kes_vectors.json
cardano-git-rev/: CHANGELOG.md  Cargo.toml  README.md  build.rs
cardano-git-rev/src/: lib.rs
cardano-git-rev/tests/: git_rev.rs
cardano-slotting/: CHANGELOG.md  Cargo.toml  README.md
cardano-slotting/src/: block.rs  lib.rs  slot.rs  time.rs
cardano-slotting/src/epoch_info/: api.rs  extend.rs  fixed.rs  mod.rs
cardano-slotting/tests/: slotting.rs
cardano-strict-containers/: CHANGELOG.md  Cargo.toml  README.md
cardano-strict-containers/src/: lib.rs  strict_finger_tree.rs  strict_maybe.rs  strict_seq.rs  unit.rs
cardano-test-vectors/: CHANGELOG.md  Cargo.toml  README.md
cardano-test-vectors/scripts/: generate_hash_vectors_haskell.hs
cardano-test-vectors/src/: debug.rs  lib.rs
cardano-test-vectors/test_vectors/: compact_single_kes_test_vectors.json  compact_sum_kes_period_evolution_vectors.json  compact_sum_kes_test_vectors.json  ecdsa_secp256k1_test_vectors.json  ed25519_test_vectors.json  hash_test_vectors.json  schnorr_secp256k1_test_vectors.json  single_kes_test_vectors.json  sum_kes_period_evolution_vectors.json  sum_kes_test_vectors.json
cardano-test-vectors/tests/: debug_ed25519_trace.rs  dsign_ed25519_vectors.rs  kes_vectors.rs  performance.rs
cardano-vrf-pure/: CHANGELOG.md  Cargo.toml  README.md  VRF_PARITY_COMPLETE.md
cardano-vrf-pure/benches/: vrf_benchmark.rs
cardano-vrf-pure/src/: cardano_compat.rs  common.rs  draft03.rs  draft13.rs  lib.rs
cardano-vrf-pure/src/cardano_compat/: debug.rs  field.rs  mod.rs  montgomery.rs  point.rs  prove.rs  tests.rs  verify.rs
cardano-vrf-pure/tests/: debug_vrf_trace.rs  haskell_vrf_cross_validation.rs  performance.rs
deepseq/: CHANGELOG.md  Cargo.toml  README.md
deepseq/src/: lib.rs
docs/: COMPLETION_REPORT.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_ORGANIZATION.md  Gemfile  Home.md  KES_ACTION_ITEMS.md  KES_CROSSCODE_ACCURACY_AUDIT.md  README.md  (+8 more)
heapwords/: CHANGELOG.md  Cargo.toml  README.md
heapwords/src/: lib.rs
measures/: CHANGELOG.md  Cargo.toml  README.md
measures/src/: lib.rs  measure.rs
nothunks/: CHANGELOG.md  Cargo.toml  README.md
nothunks/src/: lib.rs
orphans-deriving-via/: CHANGELOG.md  Cargo.toml  README.md
orphans-deriving-via/src/: lib.rs
(+110 files in other folders)
