[workspace]
members = [
    "base-deriving-via",
    "cardano-base",
    "cardano-binary",
    "cardano-git-rev",
    "cardano-crypto-class",
    "cardano-vrf-pure",
    "deepseq",
    "cardano-slotting",
    "cardano-strict-containers",
    "heapwords",
    "nothunks",
    "orphans-deriving-via",
    "measures",
]

resolver = "2"

[workspace.lints.clippy]
# Lint groups (with lower priority so individual lints can override)
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

# Pedantic lints (selective)
must_use_candidate = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

# Restriction lints (for production code quality)
unwrap_used = "warn"
expect_used = "allow"  # Allow expect with good messages
panic = "warn"
todo = "warn"
unimplemented = "deny"

# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
similar_names = "allow"
needless_borrows_for_generic_args = "allow"  # Stylistic, doesn't affect correctness
useless_conversion = "allow"  # Can be overly pedantic with generic code
