[package]
name = "base-deriving-via"
version = "0.1.0"
edition = "2021"
description = "Generic-based Semigroup and Monoid derivation helpers inspired by Cardano's base-deriving-via package."
license = "Apache-2.0"
repository = "https://github.com/FractionEstate/cardano-base"
authors = ["Cardano Engineering"]
readme = "README.md"
keywords = ["algebra", "semigroup", "monoid", "generic"]
categories = ["algorithms", "development-tools"]

[dependencies]
