[package]
name = "cardano-base"
version = "0.1.0"
edition = "2021"
authors = ["Cardano Engineering"]
description = "Cardano feature flag primitives"
license = "Apache-2.0"
repository = "https://github.com/FractionEstate/cardano-base"

[lints]
workspace = true
[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.17"
once_cell = "1.20"

[dev-dependencies]
serde_json = "1.0"
