[package]
name = "cardano-base"
version = "0.1.0"
edition = "2021"
authors = ["FractionEstate"]
description = "Cardano base types and utilities - foundational primitives for Cardano blockchain applications"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/FractionEstate/cardano-base-rust"
homepage = "https://github.com/FractionEstate/cardano-base-rust"
documentation = "https://docs.rs/cardano-base"
keywords = ["cardano", "blockchain", "primitives"]
categories = ["data-structures"]
rust-version = "1.70"

[lints]
workspace = true
[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.17"
once_cell = "1.20"

[dev-dependencies]
serde_json = "1.0"
