[package]
name = "cardano-binary"
version = "0.1.0"
edition = "2021"
authors = ["Cardano Engineering"]
description = "Binary serialisation and deserialisation helpers for Cardano"
license = "Apache-2.0"
repository = "https://github.com/FractionEstate/cardano-base"
readme = "README.md"
keywords = ["cardano", "cbor", "serialization"]
categories = ["encoding"]

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
ciborium-io = "0.2"
ciborium-ll = "0.2"
thiserror = "2.0.17"

[dev-dependencies]
serde_bytes = "0.11"
proptest = "1.5"
hex = "0.4"
