[package]
name = "cardano-crypto-class"
version = "0.1.0"
edition = "2021"
description = "Cardano cryptography primitives and utilities - VRF, KES, DSIGN, and hashing algorithms"
license = "Apache-2.0 OR MIT"
authors = ["FractionEstate"]
repository = "https://github.com/FractionEstate/cardano-base-rust"
homepage = "https://github.com/FractionEstate/cardano-base-rust"
documentation = "https://docs.rs/cardano-crypto-class"
keywords = ["cardano", "cryptography", "vrf", "kes", "blockchain"]
categories = ["cryptography", "no-std"]
rust-version = "1.70"
build = "build.rs"

[lints]
workspace = true
[dependencies]
digest = "0.10"
hex = "0.4"
num-bigint = { version = "0.4", features = ["std"] }
rand = "0.8"
thiserror = "2.0.17"
blake2 = "0.10"
cardano-binary = { path = "../cardano-binary" }
serde = { version = "1", features = ["derive"], optional = true }
ciborium = "0.2"
subtle = "2"
libc = "0.2"
ed25519-dalek = "2"
cardano-vrf-pure = { path = "../cardano-vrf-pure" }

[dev-dependencies]
sha2 = "0.10"
serde_json = "1"
