[package]
name = "cardano-crypto-class"
version = "0.1.0"
edition = "2024"
description = "Cardano cryptography primitives and utilities - VRF, KES, DSIGN, and hashing algorithms"
license = "Apache-2.0 OR MIT"
authors = ["FractionEstate"]
repository = "https://github.com/FractionEstate/cardano-base-rust"
homepage = "https://github.com/FractionEstate/cardano-base-rust"
documentation = "https://docs.rs/cardano-crypto-class"
keywords = ["cardano", "cryptography", "vrf", "kes", "blockchain"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"
build = "build.rs"

[lints]
workspace = true
[dependencies]
digest = "0.10"
hex = "0.4"
num-bigint = { version = "0.4", features = ["std"] }
rand = "0.9.2"
rand_core = "0.9.3"
thiserror = "2.0.17"
blake2 = "0.10"
cardano-binary = { path = "../cardano-binary" }
serde = { version = "1.0.228", features = ["derive"], optional = true }
ciborium = "0.2"
subtle = "2.6.1"
libc = "0.2"
ed25519-dalek = "2"
cardano-vrf-pure = { path = "../cardano-vrf-pure" }

# Cross-chain cryptography support
secp256k1 = { version = "0.31.1", features = ["recovery", "rand"] }
sha2 = "0.10"
sha3 = "0.10"
ripemd = "0.1"

[dev-dependencies]
serde_json = "1.0.145"
proptest = "1.8.0"
cardano-test-vectors = { path = "../cardano-test-vectors" }
