[package]
name = "cardano-slotting"
version = "0.1.0"
edition = "2024"
authors = ["FractionEstate"]
description = "Slotting and time management primitives for Cardano blockchain consensus"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/FractionEstate/cardano-base-rust"
homepage = "https://github.com/FractionEstate/cardano-base-rust"
documentation = "https://docs.rs/cardano-slotting"
keywords = ["cardano", "blockchain", "consensus", "time", "slots"]
categories = ["date-and-time"]
rust-version = "1.85"

[lints]
workspace = true
[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
time = { version = "0.3", features = ["serde", "macros"] }

[dev-dependencies]
serde_json = "1.0.145"
