[package]
name = "cardano-strict-containers"
version = "0.1.0"
edition = "2021"
authors = ["Cardano Engineering"]
description = "Strict container counterparts used across Cardano"
license = "Apache-2.0"
repository = "https://github.com/FractionEstate/cardano-base"
readme = "README.md"

[lints]
workspace = true
[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
