[package]
name = "cardano-test-vectors"
version = "0.1.0"
edition = "2024"
authors = ["FractionEstate"]
license = "Apache-2.0 OR MIT"
description = "Embedded test vector fixtures shared across the cardano-base-rust workspace"
repository = "https://github.com/FractionEstate/cardano-base-rust"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
cardano-crypto-class = { path = "../cardano-crypto-class" }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "generate_kes_vectors"
path = "src/bin/generate_kes_vectors.rs"

[[bin]]
name = "generate_ed25519_outputs"
path = "src/bin/generate_ed25519_outputs.rs"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
