[package]
name = "cardano-vrf-pure"
version = "0.1.0"
edition = "2021"
authors = ["FractionEstate"]
license = "Apache-2.0 OR MIT"
description = "Pure Rust VRF (Verifiable Random Function) for Cardano - IETF Draft-03 and Draft-13 compliant"
repository = "https://github.com/FractionEstate/cardano-base-rust"
homepage = "https://github.com/FractionEstate/cardano-base-rust"
documentation = "https://docs.rs/cardano-vrf-pure"
keywords = ["cardano", "vrf", "cryptography", "verifiable-random-function", "blockchain"]
categories = ["cryptography", "no-std"]
rust-version = "1.70"

[lints]
workspace = true

[dependencies]
# Core cryptographic primitives
curve25519-dalek = { version = "4.1", features = ["digest", "rand_core"] }
sha2 = "0.10"
rand_core = "0.6"

# Utilities
subtle = "2.5"
zeroize = { version = "1.7", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
hex = "0.4"
rand = "0.8"

[features]
default = []
