[package]
name = "deepseq"
version = "0.1.0"
edition = "2024"
authors = ["IOHK"]
license = "Apache-2.0"
description = "Utilities for eagerly evaluating values akin to Haskell's Control.DeepSeq"
repository = "https://github.com/input-output-hk/cardano-base"
rust-version = "1.85"

[lints]
workspace = true
[dependencies]
base-deriving-via = { path = "../base-deriving-via" }
