[package]
name = "measures"
version = "0.1.0"
edition = "2024"
authors = ["Cardano Engineering"]
description = "Multidimensional measurement combinators for Cardano components"
license = "Apache-2.0"
repository = "https://github.com/FractionEstate/cardano-base"
readme = "README.md"
keywords = ["cardano", "measure", "capacity"]
categories = ["algorithms"]
rust-version = "1.85"

[lints]
workspace = true
[dependencies]
thiserror = "2.0.17"

[dev-dependencies]
proptest = "1.8.0"
